# AoC-2022

./: .gitignore  README  init.sh
d1/: d1.cabal  solve.hs
d10/: d10.cabal
d10/app/: Main.hs
d11/: d11.cabal
d11/app/: Main.hs
d12/: d12.cabal
d12/app/: Main.hs
d13/: d13.cabal
d13/app/: Main.hs
d2/: d2.cabal
d2/app/: Main.hs
d3/: d3.cabal
d3/app/: Main.hs
d4/: d4.cabal
d4/app/: Main.hs
d5/: d5.cabal
d5/app/: Main.hs
d6/: d6.cabal
d6/app/: Main.hs
d7/: d7.cabal
d7/app/: Main.hs
d8/: d8.cabal
d8/app/: Main.hs
d9/: d9.cabal
d9/app/: Main.hs
