cabal-version:   3.8
name:            d12
version:         0.1.0.0
license:         NONE
author:          thiel
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable d12
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0,
                      containers >= 0.6.5.1,
                      mtl >= 2.2.2,
                      parallel >= 3.2.2.0,
                      search-algorithms
    hs-source-dirs:   app
    default-language: Haskell2010
