cabal-version:   3.8
name:            d4
version:         0.1.0.0
license:         NONE
author:          thiel
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable d4
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0,
                      split >= 0.2.3.5,
                      split >= 0.2.3.5,
                      text >= 1.2.5.0,
                      text >= 1.2.5.0
    hs-source-dirs:   app
    default-language: Haskell2010
